    - Log printing is now protected with mutex so output won't be messed up when used by multiple threads.
    - Small optimizations.

  [Timo Rongas]
  * Fixes: NB#196131 - Sensord should unset Screen.TopEdge when unclear
    - When device is flat on table,
      - Face value will be given as Orientation value for OrientationSensor
      - Screen.TopEdge will be set unset for ContextFW

  [Antti Virtanen]
  * Removed unnecessary mutex from NodeBase
  * Bin doesn't use separate thread anymore. Implemented ThreadBin which still supports threaded usage. [Fixes NB#196900]
  * RingBuffer is not synchronized anymore. Implemented SynchronizedRingBuffer which is supposed to be used with ThreadBin.

 -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Tue, 21 Sep 2010 09:15:08 +0300

sensord (0.6.25) unstable; urgency=low

  [Antti Virtanen]
  * Various cleanup and refactoring
    - Added some missing includes and removed unnecessary ones.
    - Changed destructors of classes used in inheritance to virtual.
    - Some optimizations.
    - Fixed const correctness of some functions.
    - Replaced direct usage of qDebug() with logging macros.
    - Improved error-handling in Loader.
    - SensordLogger now correctly prints QStrings.
    - Config/Logging singletons are now unloaded before exitting from main().

 -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Tue, 21 Sep 2010 10:32:41 +0300

sensord (0.6.24) unstable; urgency=low

  [Antti Virtanen]
  * SensordLogger rewritten: new implementation should be lot of faster and random core dumps should disapper. Logging macros work as before. Fixes: NB#191465.
  * Moved signal handler implementations to main.cpp and signal() is called only for main thread. Added new function SensorManager::printStatus() which implements debug printing for signal handler.

  [Timo Rongas]
  * Fixes: NB#192707 - Sensord polls constantly on otherwise idle device

 -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Mon, 20 Sep 2010 10:32:41 +0300
