@@ -34,6 +34,10 @@ orientation_overflow_min = 800
 orientation_overflow_max = 1250
 orientation_poll_interval = 1000
 
+# How old samples can we safely ignore for desktop orientation (microsecs)
+# Increase to make more stable, decrease to add sensitivity
+orientation_discard_time = 750000
+
 ### Plugins
 ###
 ### Provide the actual plugin name (libsensor.so --> sensor) for the
